--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </li>
 
                 <li>
-                    <a href="https://github.com/nomedeusuario" title="Ir para o GitHub" target="_blank">
+                    <a href="https://github.com/Jackk55" title="Ir para o GitHub" target="_blank">
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
