--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="container-foto">
             <div class="foto sombra-interna">
-                <img src="./src/imagens/inosuke encarando.png" alt="foto do portifólio do Jackson">
+                <img src="./src/imagens/WhatsApp_Image_2024-04-07_at_01.45.02_resized-removebg-preview.png" alt="foto do portifólio do Jackson">
             </div>
         </div>
     </section>
